# usp-ccp-lambda

./: .gitignore  CMakeLists.txt  README.md
USP_MsgLib/: CMakeLists.txt
USP_MsgLib/src/: NotifyResponse.cpp  NotifyResponse.h  OnBoardResponse.cpp  OnBoardResponse.h  USPMessage.cpp  USPMessage.h  USPerror.cpp  USPerror.h  USPresponse.cpp  USPresponse.h
USPmsg_rec_lib/: CMakeLists.txt
USPmsg_rec_lib/src/: usp-msg-1-1.pb.cc  usp-msg-1-1.pb.h  usp-record-1-1.pb.cc  usp-record-1-1.pb.h
usp_encode/: CMakeLists.txt  ftg.json  get.json  main.cpp  output  output.json  update.json  updateshadow.json
usp_lambda/: CMakeLists.txt  main.cpp
